explicitly enable annotation processing